--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -39,7 +39,7 @@
 妈妈对女孩说：“移到石狮这一边，我给你照相。”女孩没有移动，她慢慢地举起右手成半圆形，像是法轮功“头顶抱轮”的一侧，妈妈说.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 9:40 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/21/n12765399.md#1" target="_blank">元宵节赏花灯吃元宵 起源有哪些说法？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/21/n12765399.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/02/110217082246100311-150x120.jpg" align ="left"></a>“灯火楼台万斛莲”，一说到元宵夜，谁能不想起赏花灯呢？“嘉夜煮浮圆”，元宵夜更少不了元宵这一道美味！你知道这文化的起源吗？不管是花灯还是元宵，都连系着一种核心的精神。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 7:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751211.md#1" target="_blank">天堂梦（93）</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751211.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>北大荒的气温急剧降到零下20度，四壁潮湿而室内只生着一只小火炉，室内温度在后半夜骤降到零下10度左右。这群书生平时缺乏锻炼、体质差，而农场天天供应难右吃的只有窝窝头和只有一点油花的白菜汤，因此严重缺乏营养。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 3:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12695469.md#1" target="_blank">从《西游记》的“修炼”文化解读当代时下的生活2</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12695469.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/12/Screen-Shot-2018-12-03-at-6.29.53-PM-1-150x120.png" align ="left"></a>唐僧是个纯正的人，他在西天路上遇到无数苦难，如果不是想起誓言，估计可能打退堂鼓，猪八戒不是多次叫嚷散伙嘛！可以说，唐僧取经成功与他誓言有一些关系。幸好，他的修行路上已给安排了助他克服魔难的人物：孙悟空、猪八戒、沙僧和白龙马。西天路上众多妖魔不断被打死了，其实也是不断在纯净唐僧的生命场中的魔性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 2:42 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777412.md#1" target="_blank">七律：迎元宵</a><br></h3>十五期迎月已圆， 家家户户彩灯悬。 汤圆已备甜甜馅， 谜语深藏厚厚笺。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 11:22 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775177.md#1" target="_blank">一七令．正月十五</a><br></h3> 圆。 规矩，方圆。 元宵节，煮汤圆。 和和美美，团团圆圆。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 10:15 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775178.md#1" target="_blank">歌词：祥云起月月如兰</a><br></h3>元宵望月月圆圆， 茶韵芬芳香火燃。 拜谢师尊辛苦度， 宝书惊现盛开莲！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 12:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774790.md#1" target="_blank">台湾古典诗：民主与专制（二）</a><br></h3> 公投直选泯争端，顺应潮流社稷安， 保障人权昭法令，提升国格树标竿；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 12:06 AM			</td></tr>
