--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -33,11 +33,8 @@
 那是一个美丽的梦境
 封闭孤独的日子   一天又一天
 藏在心底的   久远的思念......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 10:23 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/24/n12772455.md#1" target="_blank">旧金山与菲利蒙炼功点的故事（17）</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/24/n12772455.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/IMG_1554-150x120.jpg" align ="left"></a>文：属真
-在旧金山中国城“天下为公”牌楼下，来了一位母亲，带着个三四岁的可爱小女孩，穿着很雅致，小姑娘一到就坐在阶梯上，旁边是我们的展板，上面有不同的个人或集体的炼功画面。
-“这是你的选择”
-妈妈对女孩说：“移到石狮这一边，我给你照相。”女孩没有移动，她慢慢地举起右手成半圆形，像是法轮功“头顶抱轮”的一侧，妈妈说.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 9:40 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/21/n12765399.md#1" target="_blank">元宵节赏花灯吃元宵 起源有哪些说法？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/21/n12765399.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/02/110217082246100311-150x120.jpg" align ="left"></a>“灯火楼台万斛莲”，一说到元宵夜，谁能不想起赏花灯呢？“嘉夜煮浮圆”，元宵夜更少不了元宵这一道美味！你知道这文化的起源吗？不管是花灯还是元宵，都连系着一种核心的精神。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 7:30 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777416.md#1" target="_blank">神韵行（五十七）大闹天宫</a><br></h3>烟生雪溅玉飞帘， 一境幽藏世外恬。 灵域翠分三岛秀， 俏猴碧抢一桃甜。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月27日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777436.md#1" target="_blank">藏头诗：春季</a><br></h3>春立立春万物新 雨水水雨雨纷纷 惊蛰蛰惊春雷震 春分分春蝶花亲......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月27日 12:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777435.md#1" target="_blank">诗歌：世界</a><br></h3> 疫卷世萧条 风雨飘摇 为祸人间有红妖 几人能醒明真相 苍宇聚焦......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 11:56 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777412.md#1" target="_blank">七律：迎元宵</a><br></h3>十五期迎月已圆， 家家户户彩灯悬。 汤圆已备甜甜馅， 谜语深藏厚厚笺。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 11:22 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775177.md#1" target="_blank">一七令．正月十五</a><br></h3> 圆。 规矩，方圆。 元宵节，煮汤圆。 和和美美，团团圆圆。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 10:15 AM			</td></tr>
