--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -40,7 +40,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754629.md#1" target="_blank">高耀洁：93岁的我，一生都在逃难</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754629.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/12/1502092245362662-150x120.jpg" align ="left"></a>我今年已九十三岁了，多次“跑反”和逃难伴随着我的一生。 从山东逃到河南，在河南又几度逃难，度过了我人生艰苦的青壮年时代。到了老年，逃难并没有停下来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月16日 5:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754266.md#1" target="_blank">【名家专栏】警惕对中共体制的羡慕</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754266.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-156313041-700x420-150x120.jpg" align ="left"></a>在令人目瞪口呆的对川普（特朗普）第二次弹劾审判的背后，是已故的（奥地利心理学家、精神分析学的创始人）西格蒙德?弗洛伊德（Sigmund Freud）或许会称之为“羡慕中国”的秘密愿望。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月16日 5:08 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754491.md#1" target="_blank">钟原：世卫调查新证据 中共或再被孤立</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754491.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1231058175-150x120.jpg" align ="left"></a>被称作世卫组织赴中国的调查组2月9日召开发布会后，美国、英国和澳大利亚最激烈地反驳了这次调查的结论，各国媒体更是议论纷纷。中共当然会继续狡辩，很可能导致新一轮的国际孤立。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月16日 3:50 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754269.md#1" target="_blank">【名家专栏】美多名老人接种后亡 疫苗争议大</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/15/n12754269.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230988850-1-700x420-150x120.jpg" align ="left"></a>据报导，在肯塔基州和阿肯色州的养老院中分别发生了多起病人接种冠状病毒（中共病毒）疫苗后死亡的事件。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月16日 3:30 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/18/n12760357.md#1" target="_blank">【纪元专栏】安乐死vs临终关怀 哪个才是正道？</a><br></h3>去年，一位身患慢性肺癌多年的好友临终之时，呼吸困难，饱受痛苦。临终之际，被临终关怀专家团队问到是选择继续忍受痛苦，还是选择注射药物减痛治疗时，他选择了后者。注射药物后，他疼痛明显减轻，很快陷入沉睡，次日安详离世。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月18日 11:02 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/17/n12757686.md#1" target="_blank">李春草：水仙子?中国梦</a><br></h3>中国梦里歌舞欢，
 村官朝臣竞相贪。
 纪监摆设聋子耳，
