--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775571.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/02/Untitled-7-320x200.jpg"><p align="center">【直播】2021保守派大会首日 政要发言</p></a>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775571.md#1" title="【直播】2021保守派大会首日 政要发言""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/Untitled-7-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775571.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1304244990-320x200.jpg"><p align="center">【直播】2021保守派大会首日 政要发言</p></a>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775571.md#1" title="【直播】2021保守派大会首日 政要发言""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1304244990-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777270.md#1" title="中共禁台湾凤梨进口 学者：加速“脱钩”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/485467-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777217.md#1" title="【独家】联合国将异见者名单私下给中共""><img width="73" src="https://i.epochtimes.com/assets/uploads/2012/09/1209192331572214-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/17/n12758051.md#1" title="【预告】新唐人元宵节再播神韵晚会和音乐会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/SY_Web_Article-320x200.png">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775087.md#1" title="117个机构联合会议 吁对中共活摘器官追责""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/Screen-Shot-2021-02-24-at-3.59.29-PM-320x200.png">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775092.md#1" title="科顿等议员提法案 拟制裁中共统战部""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230679145-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yrsmsb310.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777688.md#1">疫情下佛州安全开放经济 州长：迎来财政盈余</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777673.md#1">伊拉克民兵官员：美对叙利亚空袭致1死数伤</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775228.md#1">【大时代华人】师承祖上的剑桥女中医师</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775571.md#1">【直播】2021保守派大会首日 政要发言</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777599.md#1">俄外交官徒手推车离开朝鲜 揭平壤真实困境</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777545.md#1">报导指昂山素季被转移到不明地点拘禁</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777688.md#1">疫情下佛州安全开放经济 州长：迎来财政盈余</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777548.md#1">《百里挑一》获赞 剧组元宵节向民众致诚挚问候</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777673.md#1">伊拉克民兵官员：美对叙利亚空袭致1死数伤</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775228.md#1">【大时代华人】师承祖上的剑桥女中医师</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775571.md#1">【直播】2021保守派大会首日 政要发言</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777599.md#1">俄外交官徒手推车离开朝鲜 揭平壤真实困境</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/24/n12772903.md#1">大陆“会计所一哥”濒临倒闭 人去楼空</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12773617.md#1">【翻墙必看】分析：中共内斗出现新信号</a><br>
@@ -96,12 +96,12 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12768344.md#1">吴孟达确诊罹患肝癌 手术后没力气说话</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12768151.md#1">【役情最前线】国安法危害超六四 港移民破纪录</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.255.86.37/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 34,985</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://219.85.110.55/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 34,985</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 373,227,672 人
+!共 373,227,718 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12773832.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/jj2FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12773832.md#1">从三起“息诉罢访”案看中共信访制套路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12772178.md#1">法轮功学员王素珍第三次被劫入辽宁女监</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12772003.md#1">学者：中共为何严打“侮辱英烈”的网民</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12772073.md#1">报告：中共非法起诉大量维族人 任意定罪判刑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/23/n12770399.md#1">赵凤华：中共集中营里的奴役和种族灭绝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/23/n12770252.md#1">恒压阀售后被用来组装气枪 研产者获刑10年</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12777599.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-51186211-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12777599.md#1">俄外交官徒手推车离开朝鲜 揭平壤真实困境</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12777497.md#1">美议员将推法案 审查美中上百个姊妹城关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776704.md#1">TikTok同意支付9200万美元和美国用户和解</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776586.md#1">中行开平支行前行长受审 三任行长贪53亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776366.md#1">中国人寿称造假责任人离职 实则异地任总经理</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12775737.md#1">债务压顶营收不佳 苏宁易购甩卖股权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12777136.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2003/08/308161406938-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12777136.md#1">凤凰卫视地震 上海文宣官员徐威任行政总裁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12777439.md#1">章家敦：中共传播病毒是“大规模谋杀”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776722.md#1">国民党立委喊反共 专家：盼更多蓝营人觉醒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776808.md#1">中船重工集团前党组书记胡问鸣被起诉</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776651.md#1">受贿数额特别巨大 重庆公安局前局长被起诉</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776021.md#1">【珍言真语】谢田：中共抢夺民企 马云是标志</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776402.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776402.md#1">又有疫情？ 北京大兴荣京丽都封闭进行检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12774519.md#1">福建长乐一染整厂发生火灾 已致2死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12774250.md#1">饱受环境噪音滋扰 重庆村民投诉3年仍未治理</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12774189.md#1">山西运城暴雪致超市顶棚压塌 1死3伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12772198.md#1">黑龙江大庆大客车坠桥 至少2死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12771161.md#1">山西平遥24死伤矿难后 县委书记升官</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776891.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/Screenshot-2021-02-26-at-11.11.39-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776891.md#1">没钱就该被瞧不起？天津教师歧视学生引众怒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/26/n12776856.md#1">四川性骚扰学生的副校长被判刑 举报者感慨</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12775004.md#1">喝一口酒店矿泉水 三亚游客消毒剂中毒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/25/n12774231.md#1">北京天文馆副研究员詹想性骚扰多名女性</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12771953.md#1">【疫情2.24】白宫宣布继续实行国家紧急状态</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/24/n12770994.md#1">黑龙江民间借贷被判诈骗 债权人举报贪官</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/22/n12767273.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/042dca8591e4eb9e19676a57fbec4d55-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/22/n12767273.md#1">救学生反被辞退 广西女教师何思云疑遭报复</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/21/n12765216.md#1">中共调整对台认知作战 培养台籍主播网红</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/20/n12764446.md#1">隐瞒中共军人身份 斯坦福研究员被控新罪名</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/19/n12761394.md#1">《新周刊》记者辞职 发集体声明谴责管理层</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/18/n12759556.md#1">贵州茅台工程师入围工程院士候选人引争议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/15/n12753624.md#1">“习”一手遮天？腾讯QQ画图红包被下架</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/20/n12763818.md#1">【内幕】广西内部预警疫苗接种的异常反应</a><br>
@@ -110,10 +110,10 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12736224.md#1">【独家】国防密件揭秘中共“六代战机”</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/20/n12700072.md#1">【独家】中国东盟峰会 中共防嘉宾不利言论</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/21/n12703413.md#1">【独家】外事文件曝中共高层误判国际局势</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777226.md#1">【十字路口】揭开“轮回”密码</a><br>
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777548.md#1">《百里挑一》获赞 剧组元宵节向民众致诚挚问候</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12777226.md#1">【十字路口】揭开“轮回”密码</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/24/n12771764.md#1">预言试析（9）诺查丹玛斯预言大瘟疫时间的算法</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/23/n12769535.md#1">乐元宵：猜灯谜智慧深 请进来一探深度</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/20/n12764433.md#1">同时死去的姊妹转生双胞胎 又见爸妈再当女儿</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12766939.md#1">奥匈帝国哈布斯堡家族的夏季行宫：美泉宫</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12766520.md#1">【涛哥侃封神】第三十三回  ?  黄飞虎泗水大战</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
